# mftool-mcp

./: .gitignore  LICENSE  NOTES.md  README.md  api_proxy.py  claude_desktop_config.example.json  mcp.json  pyproject.toml  requirements.txt  run.py  start.sh
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  FundComparator.jsx  Login.jsx
src/mftool_mcp/: __init__.py  cache.py  mcp_instance.py  server.py
src/mftool_mcp/tools/: __init__.py  calculators.py  nav.py  performance.py  portfolio.py  schemes.py
